Updated layout of mammals page and added images

--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
                 <div class="controls">
                   <span class="input-group-addon"><i class="fa fa-home"></i></span>
                   <label>Address line 1:</label>
-                  <input type="text" class="form-control" id="address-line1" placeholder="address line 1" required data-validation-required-message="Please enter line 1 of your address.">
+                  <input type="text" class="form-control" id="address-line1" placeholder="Street address" required data-validation-required-message="Please enter your address.">
                   <p class="help-block"></p>
                 </div>
               </div>
@@ -183,8 +183,8 @@
               <div class="control-group form-group">
                 <div class="controls">
                   <span class="input-group-addon"><i class="fa fa-home"></i></span>
-                  <label>Address line 2:</label>
-                  <input type="text" class="form-control" id="address-line2" placeholder="address line 2">
+                  <label>Address line 2 (optional):</label>
+                  <input type="text" class="form-control" id="address-line2" placeholder="Company, C/O, Apt., Suite, Unit, Building, Floor">
                   <!--input type="text" class="form-control" id="address-line2" placeholder="address line 2" required data-validation-required-message="Please enter line 2 of your address."-->
                   <p class="help-block"></p>
                 </div>
@@ -200,7 +200,7 @@
               <div class="control-group form-group">
                 <div class="controls">
                   <span class="input-group-addon"><i class="fa fa-map-pin"></i></span>
-                  <label class="control-label">City / Town:</label>
+                  <label class="control-label">City:</label>
                   <input type="text" class="form-control" id="city" placeholder="city" required data-validation-required-message="Please enter your city.">
                   <p class="help-block"></p>
                 </div>
@@ -212,11 +212,10 @@
               <div class="control-group form-group">
                 <div class="controls">
                   <span class="input-group-addon"><i class="fa fa-globe"></i></span>
-                  <label class="control-label">State / Province / Region:</label>
+                  <label class="control-label">State/Region:</label>
                   <select class="custom-select" id="region" required data-validation-required-message="Please enter your region.">
                     <option value="MD" selected>Maryland</option>
                     <option value="DC">Washington DC</option>
-                    <option value="VA">Virginia</option>
                   </select>
                 </div>
               </div>
@@ -227,7 +226,7 @@
               <div class="control-group form-group">
                 <div class="controls">
                   <span class="input-group-addon"><i class="fa fa-paper-plane"></i></span>
-                  <label class="control-label">Zip / Postal Code:</label>
+                  <label class="control-label">Zip Code:</label>
                     <input type="text" class="form-control" id="postal-code" placeholder="zip or postal code" required data-validation-required-message="Please enter your zip code.">
                     <p class="help-block"></p>
                 </div>
