--- a/dog-runs.html
+++ b/dog-runs.html
@@ -95,54 +95,55 @@
     <!-- Image Header -->
     <img class="img-fluid rounded mb-4" src="http://placehold.it/1200x300" alt="">
     <div class="row">
-        <div class="col">
-            <h3 style="font-family: Arial Black; color:dodgerblue">Make nature work for you!</h3>
+        <div class="card h-100 bg-main my-3">
+            <!--h4 class="card-header">How Does It Work?</h4-->
+            <h4 class="card-header"></h4>
+            <div class="card-body">
+                <h4 style="font-family:Arial Black;">MAKE NATURE WORK FOR YOU</h4>
+                <p class="card-text">Calvert Exterminators proudly offers Canine Detection Services for the extermination of rat
+                    infestations; a service offered by only one other company on the entire East Coast.
+                </p>
+            </div>
+            <div class="card-footer"></div>
         </div>
-    </div>
-    <div class="col">
-        <a>
-            Pests are good at hiding, and sometimes ordinary detective simply doesn't cut it. In these situations, we
-            offer the services of our canine pest trackers, who have natural senses and instinct combined with the training
-            necessary to get the job done.
-        </a>
     </div>
 
     <div class="row">
-        <div class="card-group">
+        <div class="card-group my-3">
             <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
+                <a><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
                 <div class="card-body">
                     <h4 class="card-title">
-                        <a href="#">Remy</a>
+                        <a>Remy</a>
                     </h4>
                     <!--p class="card-text"></p-->
                 </div>
             </div>
             <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
+                <a><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
                 <div class="card-body">
                     <h4 class="card-title">
-                        <a href="#">Aiden</a>
+                        <a>Aiden</a>
                     </h4>
                     <!--p class="card-text">Cockroaches live in the kitchens and walls of warm homes, coming out at night to eat any type
                       of food and leaving diseases in their wake.</p-->
                 </div>
             </div>
             <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
+                <a><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
                 <div class="card-body">
                     <h4 class="card-title">
-                        <a href="#">Yap</a>
+                        <a>Yap</a>
                     </h4>
                     <!--p class="card-text">With over 150 species in the U.S., Mosquitoes come out during warm temperatures of spring and summer.
                       They are host to many diseases due to feeding on a wide range of mammals.</p-->
                 </div>
             </div>
             <div class="card h-100">
-                <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
+                <a><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
                 <div class="card-body">
                     <h4 class="card-title">
-                        <a href="#">Striker</a>
+                        <a>Striker</a>
                     </h4>
                     <!--p class="card-text">With over 150 species in the U.S., Mosquitoes come out during warm temperatures of spring and summer.
                       They are host to many diseases due to feeding on a wide range of mammals.</p-->
@@ -154,47 +155,59 @@
     <!-- Marketing Icons Section -->
     <div class="row">
         <div class="col-lg-4 mb-4">
-            <div class="card h-100">
-                <h4 class="card-header">How Does It Work?</h4>
+            <div class="card h-100 bg-main">
+                <!--h4 class="card-header">How Does It Work?</h4-->
+                <h4 class="card-header"></h4>
                 <div class="card-body">
-                    <p class="card-text">Our rodent removal program utilizes a team of trained rat dogs for more advanced infestations.
-                        These dogs are skilled in locating rodents using their natural sense of smell and quickly eliminating them.
-                        Dogs have been used on farms to hunt pests since humans began farming, and they've been helping humans hunt for the past
-                        20,000 years.</p>
+                    <h4 style="font-family:Arial Black;">HOW?</h4>
+                    <p class="card-text">
+                        Pests are good at hiding, and sometimes ordinary detective simply doesn't cut it. In these situations, we
+                        offer the services of our canine pest trackers, who have natural senses and instinct combined with the training
+                        necessary to get the job done. Dogs have been used on farms to hunt pests since humans began farming,
+                        and they've been helping humans hunt for the past 20,000 years.
+                    </p>
                 </div>
-                <div class="card-footer">
+                <!--div class="card-footer">
                     <a href="#" class="btn btn-primary">Learn More</a>
-                </div>
+                </div-->
+                <div class="card-footer"></div>
             </div>
         </div>
         <div class="col-lg-4 mb-4">
-            <div class="card h-100">
-                <h4 class="card-header">Why Do It?</h4>
+            <div class="card h-100 bg-main">
+                <h4 class="card-header"></h4>
                 <div class="card-body">
-                    <p class="card-text">Using our team of rat dogs is cleaner than poison and more efficient than traps. Instead of leaving traps
+                    <h4 style="font-family:Arial Black;">WHY?</h4>
+                    <p class="card-text">
+                        Using our team of rat dogs is cleaner than poison and more efficient than traps. Instead of leaving traps
                         and waiting for the infestation to come to us, our dogs take us to the infestation. Using poison can get
                         messy, traps take time to catch pests, and return visits are needed to clean up traps. Dogs find the rats and directly
-                        eliminate them without the slow process of trapping over time.</p>
+                        eliminate them without the slow process of trapping over time.
+                    </p>
                 </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Learn More</a>
-                </div>
+                <div class="card-footer"></div>
             </div>
         </div>
         <div class="col-lg-4 mb-4">
-            <div class="card h-100">
-                <h4 class="card-header">Is It Humane?</h4>
+            <div class="card h-100 bg-main">
+                <h4 class="card-header"></h4>
                 <div class="card-body">
-                    <p class="card-text">Our dogs are trained to quickly kill rodents when they have been found. A quick death from our dogs is
-                    painless and more humane than a slow death from being poisoned in a trap. We know it's ugly business, so we aim to make it as humane as possible.</p>
+                    <h4 style="font-family:Arial Black;">HUMANE?</h4>
+                    <p class="card-text">
+                        Our dogs are trained to quickly kill rodents when they have been found. A quick death from our dogs is
+                        painless and more humane than a slow death from being poisoned in a trap. We know it's ugly business,
+                        so we aim to make it as humane as possible.
+                    </p>
                 </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Learn More</a>
-                </div>
+                <div class="card-footer"></div>
             </div>
         </div>
     </div>
     <!-- /.row -->
+    <h4>MORE</h4>
+    <div clas="row">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/3fjQOn5_EUk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
 </div>
 <!-- /.container -->
