--- a/reptiles.html
+++ b/reptiles.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Flies</title>
+    <title>Reptiles</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,6 +96,12 @@
     </ol>
 
     <!-- Project One -->
+    <div class="card text-white bg-main my-5 py-4 text-center">
+        <div class="card-body">
+            <h1>BLACK SNAKES</h1>
+            <p class="text-white m-0"></p>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-7">
             <a href="#">
@@ -103,15 +109,31 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3 id="carpenter">Black Snakes</h3>
+            <h3>REPTILE DESCRIPTION</h3>
             <p>Growing up to 80 inches long (6.5 feet), Black Snakes are very helpful in eliminating rats and mice.
                 Despite being harmless to humans, Black Snakes are intimidating to look at and may need to be removed.
             </p>
-            <h4>Treatment</h4>
-            <p>Our skilled team will locate the snake and diagnose the most effective trap for the situation.</p>
-            <!--a class="btn btn-primary" href="contact.html/service-type=Bat">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a-->
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h3 class="my-3">SIGNS</h3>
+            <ul>
+                <li>Dams: Large piles of wood logs and branches blocking streams.</li>
+                <li>Beaver lodges: Mound-shaped piles of sticks, branches, mud, and vegetation close to a body of water.</li>
+                <li>Beaver slides: Trails of mud created by beavers walking parallel to bodies of water.</li>
+                <li>Tree damage: Trees with clearly missing branches and/or a shaved trunk in the process of being cut down.</li>
+            </ul>
+        </div>
+        <div class="col">
+            <h3 class="my-3">HABITAT</h3>
+            <ul>
+                <li>Rivers</li>
+                <li>Streams</li>
+                <li>Ponds</li>
+                <li>Lakes</li>
+                <li>Marshes</li>
+            </ul>
         </div>
     </div>
     <!-- /.row -->
@@ -119,6 +141,12 @@
     <hr>
 
     <!-- Project Two -->
+    <div class="card text-white bg-main my-5 py-4 text-center">
+        <div class="card-body">
+            <h1>COPPERHEAD SNAKES</h1>
+            <p class="text-white m-0"></p>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-7">
             <a href="#">
@@ -126,15 +154,10 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Copperhead</h3>
+            <h3>REPTILE DESCRIPTION</h3>
             <p>The Northern Copperhead is the only venomous snake in the DC metropolitan area, with a deep reddish brown color with dark hourglass-shaped markings on its back,
                 this predator can grow to 3 feet and prefers rocky, wooded areas.
             </p>
-            <h4>Treatment</h4>
-            <p>Our experienced exterminators will follow the clues to locate the snake in question and employ an efficient trap.</p>
-            <!--a class="btn btn-primary" href="#">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a-->
         </div>
     </div>
     <!-- /.row -->
@@ -142,6 +165,12 @@
     <hr>
 
     <!-- Project Three -->
+    <div class="card text-white bg-main my-5 py-4 text-center">
+        <div class="card-body">
+            <h1>GARTER SNAKES</h1>
+            <p class="text-white m-0"></p>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-7">
             <a href="#">
@@ -149,15 +178,10 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Garter Snakes</h3>
+            <h3>REPTILE DESCRIPTION</h3>
             <p>The Eastern Garter Snake is a common snake known for the three white or yellow stripes that run down its back.
             Garter snakes are non-venomous and eat earthworms, millipedes, spiders, insects, salamanders, small fish, frogs, and toads.
             Despite being non-venomous, garter snakes still pose a threat in their aggressive territorial nature, biting humans and sometimes causing allergic reactions.</p>
-            <h4>Treatment</h4>
-            <p>Our experts will follow the clues left by garter snakes to leave baited traps in areas that will bring the best results.</p>
-            <!--a class="btn btn-primary" href="#">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a-->
         </div>
     </div>
     <!-- /.row -->
@@ -165,22 +189,22 @@
     <hr>
 
     <!-- Project Four -->
+    <div class="card text-white bg-main my-5 py-4 text-center">
+        <div class="card-body">
+            <h1>WATER SNAKES</h1>
+            <p class="text-white m-0"></p>
+        </div>
+    </div>
     <div class="row">
-
         <div class="col-md-7">
             <a href="#">
                 <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Water snakes</h3>
+            <h3>REPTILE DESCRIPTION</h3>
             <p>The northern water snake is an aquatic snake that dwells in lakes, swamps, streams, and other waterways around the Chesapeake Bay watershed.
             With a heavy body, large rounded head, and a pattern of black or reddish blotches on their backs, water snakes are non-venomous and aggressive when threatened.</p>
-            <h4>Treatment</h4>
-            <p>Our team will follow the most minute hints to employ the most effective traps in the most efficient locations.</p>
-            <!--a class="btn btn-primary" href="#">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a-->
         </div>
     </div>
     <!-- /.row -->
