Removed downloaded images from animal and reptile index pages. Working toward embedding wiki images

--- a/reptiles.html
+++ b/reptiles.html
@@ -96,51 +96,7 @@
     </ol>
 
     <!-- Project One -->
-    <div class="card text-white bg-main my-5 py-4 text-center">
-        <div class="card-body">
-            <h1>BLACK SNAKES</h1>
-            <p class="text-white m-0"></p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-7">
-            <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
-            </a>
-        </div>
-        <div class="col-md-5">
-            <h3>REPTILE DESCRIPTION</h3>
-            <p>Growing up to 80 inches long (6.5 feet), Black Snakes are very helpful in eliminating rats and mice.
-                Despite being harmless to humans, Black Snakes are intimidating to look at and may need to be removed.
-            </p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <h3 class="my-3">SIGNS</h3>
-            <ul>
-                <li>Dams: Large piles of wood logs and branches blocking streams.</li>
-                <li>Beaver lodges: Mound-shaped piles of sticks, branches, mud, and vegetation close to a body of water.</li>
-                <li>Beaver slides: Trails of mud created by beavers walking parallel to bodies of water.</li>
-                <li>Tree damage: Trees with clearly missing branches and/or a shaved trunk in the process of being cut down.</li>
-            </ul>
-        </div>
-        <div class="col">
-            <h3 class="my-3">HABITAT</h3>
-            <ul>
-                <li>Rivers</li>
-                <li>Streams</li>
-                <li>Ponds</li>
-                <li>Lakes</li>
-                <li>Marshes</li>
-            </ul>
-        </div>
-    </div>
-    <!-- /.row -->
 
-    <hr>
-
-    <!-- Project Two -->
     <div class="card text-white bg-main my-5 py-4 text-center">
         <div class="card-body">
             <h1>COPPERHEAD SNAKES</h1>
@@ -150,14 +106,93 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="copperhead-snake.png" alt="">
+            </a>
+            <a>
+                Public Domain, <a href="https://commons.wikimedia.org/w/index.php?curid=2182367">Link</a>
             </a>
         </div>
         <div class="col-md-5">
             <h3>REPTILE DESCRIPTION</h3>
             <p>The Northern Copperhead is the only venomous snake in the DC metropolitan area, with a deep reddish brown color with dark hourglass-shaped markings on its back,
-                this predator can grow to 3 feet and prefers rocky, wooded areas.
+                this predator can grow to 3 feet and prefers rocky, wooded areas. Despite their bites nearly never killing humans, copperheads account for more annual snake bite
+                victims than all other snake species. They give no warning signs before striking when provoked. Regardless, anyone bitten by a copperhead should seek immediate medical attention.
             </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h3 class="my-3">APPEARANCE</h3>
+            <ul>
+                <li>2' to 3.33' long.</li>
+                <li>Tan or brown scales with large dark hourglass shapes down back</li>
+            </ul>
+        </div>
+        <div class="col">
+            <h3 class="my-3">HABITAT</h3>
+            <ul>
+                <li>Fields</li>
+                <li>Woodlands</li>
+                <li>Farmlands</li>
+                <li>Mountains</li>
+            </ul>
+        </div>
+        <div class="col">
+            <h3 class="my-3">SYMPTOMS</h3>
+            <li>Pair of puncture marks</li>
+            <li>Redness/swelling around bite</li>
+            <li>Severe pain at site of bite</li>
+            <li>Nausea and vomiting</li>
+            <li>Labored breathing</li>
+            <li>Distorted vision</li>
+            <li>Numbness/tingling around face and limbs</li>
+        </div>
+    </div>
+    <!-- /.row -->
+
+    <hr>
+
+    <!-- Project Two -->
+    <div class="card text-white bg-main my-5 py-4 text-center">
+        <div class="card-body">
+            <h1>BLACK SNAKES</h1>
+            <p class="text-white m-0"></p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-7">
+            <a href="#">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="black-snake.jpg" alt="">
+            </a>
+            <a>
+                By <a rel="nofollow" class="external text" href="https://www.flickr.com/photos/52450054@N04/">Judy Gallagher</a> - <a rel="nofollow" class="external free" href="https://www.flickr.com/photos/52450054@N04/6936274620/">https://www.flickr.com/photos/52450054@N04/6936274620/</a>, <a href="https://creativecommons.org/licenses/by/2.0" title="Creative Commons Attribution 2.0">CC BY 2.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=54266563">Link</a>
+            </a>
+        </div>
+        <div class="col-md-5">
+            <h3>REPTILE DESCRIPTION</h3>
+            <p>Growing up to 80 inches long (6.5 feet), Black Snakes are very helpful in eliminating rats and mice.
+                Black snakes pose a useful role in protecting farmland from pests, but may need to be relocated if
+                nesting in houses or other buildings. Despite their intimidating size of up to seven feet, Black snakes
+                are mostly harmless to humans, only biting when intimidated.
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h3 class="my-3">APPEARANCE</h3>
+            <ul>
+                <li>3.5' to 7' long.</li>
+                <li>Shiny black scales on back</li>
+                <li>Light colored belly</li>
+            </ul>
+        </div>
+        <div class="col">
+            <h3 class="my-3">HABITAT</h3>
+            <ul>
+                <li>Fields</li>
+                <li>Woodlands</li>
+                <li>Farmlands</li>
+            </ul>
         </div>
     </div>
     <!-- /.row -->
@@ -174,7 +209,10 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="garter-snake.jpg" alt="">
+            </a>
+            <a>
+                By <a rel="nofollow" class="external text" href="https://www.flickr.com/people/44124348109@N01">Steve Jurvetson</a> from Menlo Park, USA - <a rel="nofollow" class="external text" href="https://www.flickr.com/photos/44124348109@N01/825514494/">Found under log</a>, <a href="https://creativecommons.org/licenses/by/2.0" title="Creative Commons Attribution 2.0">CC BY 2.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=2483713">Link</a>
             </a>
         </div>
         <div class="col-md-5">
@@ -184,6 +222,31 @@
             Despite being non-venomous, garter snakes still pose a threat in their aggressive territorial nature, biting humans and sometimes causing allergic reactions.</p>
         </div>
     </div>
+    <div class="row">
+        <div class="col">
+            <h3 class="my-3">APPEARANCE</h3>
+            <ul>
+                <li>23" to 30" long.</li>
+                <li>Yellowish greenish scales with 3 long stripes down back</li>
+            </ul>
+        </div>
+        <div class="col">
+            <h3 class="my-3">HABITAT</h3>
+            <ul>
+                <li>Fields</li>
+                <li>Woodlands</li>
+                <li>Farmlands</li>
+                <li>Mountains</li>
+            </ul>
+        </div>
+        <div class="col">
+            <h3 class="my-3">SYMPTOMS</h3>
+            <li>Pair of small puncture marks</li>
+            <li>Minor redness/swelling at bite</li>
+            <li>Minor itching at bite</li>
+        </div>
+    </div>
+
     <!-- /.row -->
 
     <hr>
@@ -198,13 +261,42 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="water-snake.jpg" alt="">
+            </a>
+            <a>
+                By Patrick Coin (<a href="//commons.wikimedia.org/wiki/User:Cotinis" title="User:Cotinis">Patrick Coin</a>) - Photograph taken by Patrick Coin, <a href="https://creativecommons.org/licenses/by-sa/2.5" title="Creative Commons Attribution-Share Alike 2.5">CC BY-SA 2.5</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=789026">Link</a>
             </a>
         </div>
         <div class="col-md-5">
             <h3>REPTILE DESCRIPTION</h3>
             <p>The northern water snake is an aquatic snake that dwells in lakes, swamps, streams, and other waterways around the Chesapeake Bay watershed.
-            With a heavy body, large rounded head, and a pattern of black or reddish blotches on their backs, water snakes are non-venomous and aggressive when threatened.</p>
+            With a heavy body, large rounded head, and a pattern of black or reddish blotches on their backs, water snakes are non-venomous and aggressive when threatened.
+            Water snakes are frequently confused with water moccassin snakes, (aka cottonmouths) a venomous snake with a more harmful bite than that of copperheads, which leads to
+            water snakes being killed despite being largely harmless. </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h3 class="my-3">APPEARANCE</h3>
+            <ul>
+                <li>23" to 30" long.</li>
+                <li>Yellowish greenish scales with 3 long stripes down back</li>
+            </ul>
+        </div>
+        <div class="col">
+            <h3 class="my-3">HABITAT</h3>
+            <ul>
+                <li>Lakes</li>
+                <li>Swamps</li>
+                <li>Streams</li>
+                <li>Waterways</li>
+            </ul>
+        </div>
+        <div class="col">
+            <h3 class="my-3">SYMPTOMS</h3>
+            <li>Pair of small puncture marks</li>
+            <li>Minor redness/swelling at bite</li>
+            <li>Minor itching at bite</li>
         </div>
     </div>
     <!-- /.row -->
