--- a/pest-control.html
+++ b/pest-control.html
@@ -100,9 +100,9 @@
         </div>
 
         <div class="col-md-4">
-            <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">HOW PEST CONTROL SERVICES WORK</h3>
+            <h3 class="my-3">HOW PEST CONTROL SERVICES WORK</h3>
             <p>Ants, cockroaches, mosquitoes, hornets, mice, rats, and more... </p>
-            <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">THE STEPS:</h3>
+            <h3 class="my-3">THE STEPS:</h3>
             <!--ul>
                 <li>Detect-
                     Inspection
@@ -168,10 +168,10 @@
 
     <div class="row">
         <div class="col">
-            <h3 class="my-4" style="font-family: Arial Black; color:dodgerblue">HOW MONTHLY PEST CONTROL WORKS:</h3>
+            <h3 class="my-4">HOW MONTHLY PEST CONTROL WORKS:</h3>
             <h4 class="my-4" style="font-family: Arial Black; color:dodgerblue">FIRST VISIT</h4>
             <p>One of our friendly technicians will treat the inside and outside of your home and develop a customized plan for protection. </p>
-            <h4 class="my-4" style="font-family: Arial Black; color:dodgerblue">REGULAR VISITS</h4>
+            <h4 class="my-4">REGULAR VISITS</h4>
             <p> Pests are always active, so you need protection to stay ahead of them.
 
                 Our custom treatments adapt with the season to address seasonal pest activity in your area, giving you protection all year long.
@@ -183,9 +183,9 @@
     </div>
 
     <!-- Related Projects Row -->
-    <h3 class="my-4" style="font-family: Arial Black; color:dodgerblue">COVERAGE INCLUDES:</h3>
+    <h3 class="my-4">COVERAGE INCLUDES:</h3>
 
-    <div class="row" style="background-color: dodgerblue; border-radius: 25px;">
+    <div class="row">
 
         <div class="col-md-3 col-sm-6 mb-4">
             <a href="ants.html">
@@ -221,13 +221,12 @@
 
     </div>
     <!-- /.row -->
-    <div class="row" style="background-color: dodgerblue; border-radius: 25px;">
-
+    <div class="row">
         <div class="col-md-3 col-sm-6 mb-4">
             <a href="mosquitoes.html">
                 <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
                 <img src="dennis.jpg" class="rounded-circle-custom">
-                <p style="font-family: Arial Black; color:white">Mosquitoes</p>
+                <p style="font-family: Arial Black; color:white;">Mosquitoes</p>
             </a>
         </div>
 
