--- a/flies.html
+++ b/flies.html
@@ -16,9 +16,6 @@
     <!-- Custom styles for this template -->
     <link href="css/modern-business.css" rel="stylesheet">
 
-    <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
 </head>
 
 <body>
@@ -46,11 +43,11 @@
                         Portfolio
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                        <a class="dropdown-item active" href="portfolio-1-col.html">1 Column Portfolio</a>
+                        <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
                         <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
                         <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
                         <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-                        <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+                        <a class="dropdown-item active" href="portfolio-item.html">Single Portfolio Item</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -95,128 +92,241 @@
         <li class="breadcrumb-item active">Flies</li>
     </ol>
 
-    <!-- Project One -->
-    <div class="row">
-        <div class="col-md-7">
-            <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
-            </a>
+    <!-- Roaches -->
+    <div class="card text-white bg-main my-5 py-4 text-center">
+        <div class="card-body">
+            <h1 class="thick">Housefly</h1>
         </div>
-        <div class="col-md-5">
-            <h3 id="carpenter">Carpenter Ants</h3>
-            <p>Native to the eastern seaboard, Carpenter ants make their homes inside the same wood that houses people like you and me.
-                Carpenter Ants are drawn to wooden structures, as opposed to fallen trees, due to the insulation and heating.
-                Once they are inside, they will create passages and chambers to live in, leading to significant structural damage.
-                The leavings of Carpenter Ants can be distinguished from Termites because Carpenter Ants will leave large amounts of debris similar to sawdust.
+    </div>
+    <!-- Portfolio Item Row -->
+    <div class="row">
+        <div class="col-md-8">
+            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+        </div>
+        <div class="col-md-4">
+            <!--h3 class="my-3">Pest Description</h3-->
+            <h3 class="thick">Pest Description</h3>
+            <p>Houseflies are among the common insects on Earth, and are a common sign of unsanitary conditions due to their breeding in filth including
+                garbage, feces, and rotting food. Houseflies make their way into homes through cracked walls, windows, and other openings, where they then feed and breed in
+                rotting food and garbage. In addition to being a nuisance, houseflies carry diseases including bacteria, fungi, and viruses that they transfer between the
+                decaying substances they consume and they surfaces they land on. Houseflies are a leading cause of food-borne illness.</p>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Brown</li>
+                    <li>3/8 in. size</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">Diseases</h3>
+                <ul>
+                    <li>Diarrhoea</li>
+                    <li>Typhoid fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.who.int/water_sanitation_health/resources/vector302to323.pdf">More</a></li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
+        </div>
+    </div>
+
+    <div class="card text-white bg-main my-5 py-4 text-center">
+        <div class="card-body">
+            <h1>Fruit fly</h1>
+            <p class="text-white m-0"></p>
+        </div>
+    </div>
+    <!-- Portfolio Item Row -->
+    <div class="row">
+
+        <div class="col-md-8">
+            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+        </div>
+
+        <div class="col-md-4">
+            <h3 class="my-3">Pest Description</h3>
+            <p>Fruit flies are a common sign of rotting fruit and produce, in addition to fermented foods such as beer and wine.
+            When they begin reproducing indoors, they can become very hard to eliminate, with each female producing 500 eggs that hatch
+            in 24 hours. At this rate, kitchen and trash areas of homes and businesses become swarmed by these nuisances. Fruit flies also spread
+            food-borne illnesses at extremely fast rates and their presence is cause for concern to restaurants.</p>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Light brown or tan with two stripes on back</li>
+                    <li>0.098 in. size</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">DISEASES</h3>
+                <ul>
+                    <li>Diarrhoea</li>
+                    <li>Typhoid fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.who.int/water_sanitation_health/resources/vector302to323.pdf">More</a></li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
+        </div>
+
+    </div>
+    <!-- /.row -->
+
+    <div class="card text-white bg-main my-5 py-4 text-center">
+        <div class="card-body">
+            <h1>Gnat</h1>
+            <p class="text-white m-0"></p>
+        </div>
+    </div>
+    <!-- Portfolio Item Row -->
+    <div class="row">
+        <div class="col-md-8">
+            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+        </div>
+
+        <div class="col-md-4">
+            <h3 class="my-3">Pest Description</h3>
+            <p>Gnats are widely known for their small size, contrasting their large numbers. 
             </p>
-            <h4>Treatment</h4>
-            <p>Our skilled team will diagnose the level of infestation at your home or business and choose the most efficient method of treatment
-                from our line of sprays.</p>
-            <!--a class="btn btn-primary" href="#">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a-->
         </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Dark brown or black</li>
+                    <li>1 in. size, long in shape</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
+        </div>
+
     </div>
     <!-- /.row -->
 
-    <hr>
-
-    <!-- Project Two -->
+    <div class="card text-white bg-main my-5 py-4 text-center">
+        <div class="card-body">
+            <h1>Brown-banded Cockroaches</h1>
+            <p class="text-white m-0"></p>
+        </div>
+    </div>
+    <!-- Portfolio Item Row -->
     <div class="row">
-        <div class="col-md-7">
-            <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
-            </a>
+        <div class="col-md-8">
+            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
         </div>
-        <div class="col-md-5">
-            <h3>Sugar Ants</h3>
-            <p>Sugar Ants in the United States are the generic grouping of many different families of ant, all sharing a
-                preference for sweet and greasy food scraps. These ants find their indoors, through the smallest crack, tear, or gap, to
-                eat food and ruin your space.</p>
-            <h4>Treatment</h4>
-            <p>Our expertise in the field of extermination will ensure that steps will be taken to formally identify the
-                individual family of ant in question. We will use this information to find the correct treatment for the job based
-                on the unique species and severity of infestation.</p>
-            <!--a class="btn btn-primary" href="#">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a-->
+
+        <div class="col-md-4">
+            <h3 class="my-3">Pest Description</h3>
+            <p>Brown-banded Cockroaches fly short distances to reach high spots in the kitchens and bathrooms they are likely to reside in.
+                They prefer warm, dry locations and tend to fly toward the ceiling, unlike most other roaches. They are easily distinguished
+                by the banding along their body and wings along with their tendency to fly.</p>
         </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Black</li>
+                    <li>16 in. size, long and oval in shape</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
+        </div>
+
     </div>
     <!-- /.row -->
 
-    <hr>
+    <!-- Related Projects Row -->
+    <!--h3 class="my-4">Related Projects</h3>
 
-    <!-- Project Three -->
     <div class="row">
-        <div class="col-md-7">
+
+        <div class="col-md-3 col-sm-6 mb-4">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
             </a>
         </div>
-        <div class="col-md-5">
-            <h3>Odorous House Ants</h3>
-            <p>Smelling similar to rotten coconut, Odorous House Ants stink when stepped on and will assault your nose.
-                They are attracted to sweet foods and water and are found during the spring and fall.</p>
-            <h4>Treatment</h4>
-            <p>Our skilled professionals will use clues, such as leavings and sightings, to find the source of infestation
-                and the right method of treatment. If other methods fail, our dogs can be deployed to follow the smell to the source.</p>
-            <!--a class="btn btn-primary" href="#">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a-->
-        </div>
-    </div>
-    <!-- /.row -->
 
-    <hr>
-
-    <!-- Project Four -->
-    <div class="row">
-
-        <div class="col-md-7">
+        <div class="col-md-3 col-sm-6 mb-4">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
             </a>
         </div>
-        <div class="col-md-5">
-            <h3>Argentine Ants</h3>
-            <p>Preferring sweet foods, Argentine Ants will eat almost anything and can create colonies covering an entire backyard.
-                If left unchecked, they can contaminate food and food surfaces with their bodily waste.</p>
-            <h4>Treatment</h4>
-            <p>Our team will identify locate and search the colony for any and all openings before using the appropriate method for treatment.
-                The method of treatment varies based on the severity of infestation and size of the colony.</p>
-            <a class="btn btn-primary" href="#">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="#">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
             </a>
         </div>
-    </div>
+
+        <div class="col-md-3 col-sm-6 mb-4">
+            <a href="#">
+                <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            </a>
+        </div>
+
+    </div-->
     <!-- /.row -->
-
-    <hr>
-
-    <!-- Pagination -->
-    <!--ul class="pagination justify-content-center">
-        <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-                <span class="sr-only">Previous</span>
-            </a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="#">1</a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="#">2</a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="#">3</a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-                <span class="sr-only">Next</span>
-            </a>
-        </li>
-    </ul-->
 
 </div>
 <!-- /.container -->
