Added icons to pest control page. Added images to rest of pest index

--- a/fleas.html
+++ b/fleas.html
@@ -96,7 +96,12 @@
     <div class="row">
 
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <a>
+                <a title="Erturac / CC BY-SA (https://creativecommons.org/licenses/by-sa/3.0)" href="https://commons.wikimedia.org/wiki/File:Flea.JPG"><img width="512" alt="Flea" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Flea.JPG/512px-Flea.JPG"></a>
+            </a>
+            <a>
+                <a href="https://commons.wikimedia.org/wiki/File:Flea.JPG" title="via Wikimedia Commons">Erturac</a> / <a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA</a>
+            </a>
         </div>
 
         <div class="col-md-4">
