--- a/hornets.html
+++ b/hornets.html
@@ -96,7 +96,12 @@
     <div class="row">
 
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <a>
+                <a title="Mehdi Taba / CC BY-SA (https://creativecommons.org/licenses/by-sa/4.0)" href="https://commons.wikimedia.org/wiki/File:Hornet.jpg"><img width="512" alt="Hornet" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c0/Hornet.jpg/512px-Hornet.jpg"></a>
+            </a>
+            <a>
+                By <a href="//commons.wikimedia.org/w/index.php?title=User:MehdiTaba89&amp;action=edit&amp;redlink=1" class="new" title="User:MehdiTaba89 (page does not exist)">Mehdi Taba</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/4.0" title="Creative Commons Attribution-Share Alike 4.0">CC BY-SA 4.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=72700708">Link</a>
+            </a>
         </div>
 
         <div class="col-md-4">
