--- a/mosquitoes.html
+++ b/mosquitoes.html
@@ -96,7 +96,12 @@
     <div class="row">
 
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <a>
+                <a title="Alvesgaspar / CC BY-SA (https://creativecommons.org/licenses/by-sa/3.0)" href="https://commons.wikimedia.org/wiki/File:Mosquito_2007-2.jpg"><img width="512" alt="Mosquito 2007-2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dc/Mosquito_2007-2.jpg/512px-Mosquito_2007-2.jpg"></a>
+            </a>
+            <a>
+                By <a href="//commons.wikimedia.org/wiki/User:Alvesgaspar" title="User:Alvesgaspar">Alvesgaspar</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=3112480">Link</a>
+            </a>
         </div>
 
         <div class="col-md-4">
