--- a/pest-control.html
+++ b/pest-control.html
@@ -190,7 +190,7 @@
         <div class="col-md-3 col-sm-6 mb-4">
             <a href="ants.html">
                 <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
-                <img src="dennis.jpg" class="rounded-circle-custom">
+                <img src="ant-icon.png" class="rounded-circle-custom">
                 <p style="font-family: Arial Black; color:white">Ants</p>
             </a>
         </div>
@@ -198,7 +198,7 @@
         <div class="col-md-3 col-sm-6 mb-4">
             <a href="roaches.html">
                 <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
-                <img src="dennis.jpg" class="rounded-circle-custom">
+                <img src="roach-icon.png" class="rounded-circle-custom">
                 <p style="font-family: Arial Black; color:white">Cockroaches</p>
             </a>
         </div>
@@ -206,7 +206,7 @@
         <div class="col-md-3 col-sm-6 mb-4">
             <a href="rodents.html">
                 <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
-                <img src="dennis.jpg" class="rounded-circle-custom">
+                <img src="rat-icon.png" class="rounded-circle-custom">
                 <p style="font-family: Arial Black; color:white">Rats and Mice</p>
             </a>
         </div>
@@ -214,7 +214,7 @@
         <div class="col-md-3 col-sm-6 mb-4">
             <a href="spiders.html">
                 <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
-                <img src="dennis.jpg" class="rounded-circle-custom">
+                <img src="spider-icon.png" class="rounded-circle-custom">
                 <p style="font-family: Arial Black; color:white">Spiders</p>
             </a>
         </div>
@@ -225,7 +225,7 @@
         <div class="col-md-3 col-sm-6 mb-4">
             <a href="mosquitoes.html">
                 <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
-                <img src="dennis.jpg" class="rounded-circle-custom">
+                <img src="mosquito-icon.png" class="rounded-circle-custom">
                 <p style="font-family: Arial Black; color:white;">Mosquitoes</p>
             </a>
         </div>
@@ -233,7 +233,7 @@
         <div class="col-md-3 col-sm-6 mb-4">
             <a href="flies.html">
                 <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
-                <img src="dennis.jpg" class="rounded-circle-custom">
+                <img src="fly-icon.png" class="rounded-circle-custom">
                 <p style="font-family: Arial Black; color:white">Flies</p>
             </a>
         </div>
@@ -241,7 +241,7 @@
         <div class="col-md-3 col-sm-6 mb-4">
             <a href="bed-bugs.html">
                 <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
-                <img src="dennis.jpg" class="rounded-circle-custom">
+                <img src="bedbug-icon.png" class="rounded-circle-custom">
                 <p style="font-family: Arial Black; color:white">Bed Bugs</p>
             </a>
         </div>
@@ -249,7 +249,7 @@
         <div class="col-md-3 col-sm-6 mb-4">
             <a href="hornets.html">
                 <!--img class="img-fluid" src="http://placehold.it/500x300" alt=""-->
-                <img src="dennis.jpg" class="rounded-circle-custom">
+                <img src="hornet-icon.png" class="rounded-circle-custom">
                 <p style="font-family: Arial Black; color:white">Hornets</p>
             </a>
         </div>
