--- a/spiders.html
+++ b/spiders.html
@@ -103,7 +103,12 @@
     <div class="row">
 
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <a>
+                <a title="Ken-ichi Ueda / CC BY (https://creativecommons.org/licenses/by/4.0)" href="https://commons.wikimedia.org/wiki/File:Latrodectus_hesperus_Berkeley,_California.jpg"><img width="512" alt="Latrodectus hesperus Berkeley, California" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Latrodectus_hesperus_Berkeley%2C_California.jpg/512px-Latrodectus_hesperus_Berkeley%2C_California.jpg"></a>
+            </a>
+            <a>
+                By Ken-ichi Ueda - <a rel="nofollow" class="external free" href="https://www.inaturalist.org/photos/121">https://www.inaturalist.org/photos/121</a>, <a href="https://creativecommons.org/licenses/by/4.0" title="Creative Commons Attribution 4.0">CC BY 4.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=74873884">Link</a>
+            </a>
         </div>
 
         <div class="col-md-4">
@@ -164,7 +169,12 @@
     <div class="row">
 
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <a>
+                <a title="Rosa Pineda / CC BY-SA (https://creativecommons.org/licenses/by-sa/3.0)" href="https://commons.wikimedia.org/wiki/File:Brown_Recluse.jpg"><img width="512" alt="Brown Recluse" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cc/Brown_Recluse.jpg/512px-Brown_Recluse.jpg"></a>
+            </a>
+            <a>
+                By <a href="//commons.wikimedia.org/wiki/User:Rosa_Pineda" title="User:Rosa Pineda">Rosa Pineda</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=27718265">Link</a>
+            </a>
         </div>
 
         <div class="col-md-4">
@@ -216,7 +226,12 @@
     <!-- Portfolio Item Row -->
     <div class="row">
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <a>
+                <a title="Patrick Edwin Moran / CC BY-SA (https://creativecommons.org/licenses/by-sa/3.0)" href="https://commons.wikimedia.org/wiki/File:Hogna_lenta_18.jpg"><img width="512" alt="Hogna lenta 18" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Hogna_lenta_18.jpg/512px-Hogna_lenta_18.jpg"></a>
+            </a>
+            <a>
+                By <a href="//commons.wikimedia.org/wiki/User:Patrick_Edwin_Moran" title="User:Patrick Edwin Moran">Patrick Edwin Moran</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=20787919">Link</a>
+            </a>
         </div>
 
         <div class="col-md-4">
