--- a/roaches.html
+++ b/roaches.html
@@ -101,7 +101,12 @@
     <!-- Portfolio Item Row -->
     <div class="row">
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <a>
+                <a title="Gary Alpert / CC BY-SA (http://creativecommons.org/licenses/by-sa/3.0/)" href="https://commons.wikimedia.org/wiki/File:American-cockroach.jpg"><img width="512" alt="American-cockroach" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/American-cockroach.jpg/512px-American-cockroach.jpg"></a>
+            </a>
+            <a>
+                By <a href="https://en.wikipedia.org/wiki/User:Gary_Alpert" class="extiw" title="en:User:Gary Alpert">Gary Alpert</a> - <a rel="nofollow" class="external free" href="http://www.uos.harvard.edu/ehs/pes_american_cockroach.shtml">http://www.uos.harvard.edu/ehs/pes_american_cockroach.shtml</a>, <a href="https://creativecommons.org/licenses/by/2.5" title="Creative Commons Attribution 2.5">CC BY 2.5</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=2236403">Link</a>
+            </a>
         </div>
         <div class="col-md-4">
             <!--h3 class="my-3">Pest Description</h3-->
@@ -151,7 +156,12 @@
     <div class="row">
 
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <a>
+                <a title="Lmbuga / CC BY-SA (https://creativecommons.org/licenses/by-sa/3.0)" href="https://commons.wikimedia.org/wiki/File:Blattodea._Cascuda._Santiago_de_Compostela_1.jpg"><img width="512" alt="Blattodea. Cascuda. Santiago de Compostela 1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Blattodea._Cascuda._Santiago_de_Compostela_1.jpg/512px-Blattodea._Cascuda._Santiago_de_Compostela_1.jpg"></a>
+            </a>
+            <a>
+                By <a href="//commons.wikimedia.org/wiki/User:Lmbuga" title="User:Lmbuga">Lmbuga</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=6835727">Link</a>
+            </a>
         </div>
 
         <div class="col-md-4">
@@ -202,7 +212,12 @@
     <!-- Portfolio Item Row -->
     <div class="row">
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <a>
+                <a title="Alvesgaspar / CC BY-SA (https://creativecommons.org/licenses/by-sa/4.0)" href="https://commons.wikimedia.org/wiki/File:Cockroach_May_2007-1.jpg"><img width="512" alt="Cockroach May 2007-1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/Cockroach_May_2007-1.jpg/512px-Cockroach_May_2007-1.jpg"></a>
+            </a>
+            <a>
+                By <a href="//commons.wikimedia.org/wiki/User:Alvesgaspar" title="User:Alvesgaspar">Alvesgaspar</a> - <span class="int-own-work">Self-photographed</span>, <a href="https://creativecommons.org/licenses/by-sa/4.0" title="Creative Commons Attribution-Share Alike 4.0">CC BY-SA 4.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=4907153">Link</a>
+            </a>
         </div>
 
         <div class="col-md-4">
@@ -252,7 +267,12 @@
     <!-- Portfolio Item Row -->
     <div class="row">
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <a>
+                <img class="img-fluid" src="https://upload.wikimedia.org/wikipedia/commons/8/86/Supella_longipalpa_cdc.jpg" alt="">
+            </a>
+            <a>
+                Public Domain, <a href="https://commons.wikimedia.org/w/index.php?curid=767323">Link</a>
+            </a>
         </div>
 
         <div class="col-md-4">
