--- a/rodents.html
+++ b/rodents.html
@@ -103,7 +103,12 @@
     <div class="row">
 
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <a>
+                <img class="img-fluid" src="https://upload.wikimedia.org/wikipedia/commons/8/8f/Mouse_white_background.jpg" alt="">
+            </a>
+            <a>
+                By <span lang="en">Unknown author</span> (original) / <a href="//commons.wikimedia.org/wiki/User:Ilmari_Karonen" title="User:Ilmari Karonen">Ilmari Karonen</a> (editing) - Based on <a href="//commons.wikimedia.org/wiki/File:House_mouse.jpg" title="File:House mouse.jpg">File:House mouse.jpg</a> from <a rel="nofollow" class="external free" href="http://www.nigms.nih.gov/NR/rdonlyres/89908011-CCC4-4A12-BC08-BC64FCA62DF8/0/mouse.jpg">http://www.nigms.nih.gov/NR/rdonlyres/89908011-CCC4-4A12-BC08-BC64FCA62DF8/0/mouse.jpg</a> at <a rel="nofollow" class="external free" href="http://www.nigms.nih.gov/Initiatives/Models/">http://www.nigms.nih.gov/Initiatives/Models/</a> (formerly at <a rel="nofollow" class="external free" href="http://www.nigms.nih.gov/research/modelorganisms.html">http://www.nigms.nih.gov/research/modelorganisms.html</a>), Public Domain, <a href="https://commons.wikimedia.org/w/index.php?curid=187114">Link</a>
+            </a>
         </div>
 
         <div class="col-md-4">
@@ -154,7 +159,12 @@
     <div class="row">
 
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <a>
+                <a title="6th Happiness / CC BY-SA (https://creativecommons.org/licenses/by-sa/3.0)" href="https://commons.wikimedia.org/wiki/File:DiGangi-Deermouse.jpg"><img width="512" alt="DiGangi-Deermouse" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/DiGangi-Deermouse.jpg/512px-DiGangi-Deermouse.jpg"></a>
+            </a>
+            <a>
+                By <a href="//commons.wikimedia.org/wiki/User:6th_Happiness" title="User:6th Happiness">6th Happiness</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=6861184">Link</a>
+            </a>
         </div>
 
         <div class="col-md-4">
@@ -204,7 +214,12 @@
     <!-- Portfolio Item Row -->
     <div class="row">
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <a>
+                <a title="AnemoneProjectors / CC BY-SA (https://creativecommons.org/licenses/by-sa/2.0)" href="https://commons.wikimedia.org/wiki/File:Rattus_norvegicus_-Fairlands_Valley_Park,_Stevenage,_England-8.jpg"><img width="512" alt="Rattus norvegicus -Fairlands Valley Park, Stevenage, England-8" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Rattus_norvegicus_-Fairlands_Valley_Park%2C_Stevenage%2C_England-8.jpg/512px-Rattus_norvegicus_-Fairlands_Valley_Park%2C_Stevenage%2C_England-8.jpg"></a>
+            </a>
+            <a>
+                By <a href="//commons.wikimedia.org/wiki/User:AnemoneProjectors" title="User:AnemoneProjectors">AnemoneProjectors</a> (<a href="//commons.wikimedia.org/wiki/User_talk:AnemoneProjectors" title="User talk:AnemoneProjectors"><span class="signature-talk">talk</span></a>) - <a rel="nofollow" class="external text" href="https://www.flickr.com/photos/anemoneprojectors/5696146021/">Brown Rat (Rattus norvegicus)</a>Uploaded by <a href="//commons.wikimedia.org/wiki/User:Snowmanradio" title="User:Snowmanradio">Snowmanradio</a>, <a href="https://creativecommons.org/licenses/by-sa/2.0" title="Creative Commons Attribution-Share Alike 2.0">CC BY-SA 2.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=15187853">Link</a>
+            </a>
         </div>
 
         <div class="col-md-4">
@@ -255,7 +270,12 @@
     <!-- Portfolio Item Row -->
     <div class="row">
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <a>
+                <img class="img-fluid" src="https://upload.wikimedia.org/wikipedia/commons/7/7b/Rattus_rattus03.jpg" alt="">
+            </a>
+            <a>
+                By <a href="//commons.wikimedia.org/wiki/User:Liftarn" title="User:Liftarn">Liftarn</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="http://creativecommons.org/licenses/by-sa/3.0/" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=138395">Link</a>
+            </a>
         </div>
 
         <div class="col-md-4">
